Fix - Checkout wrapping on sidebar

--- a/src/containers/sidebar/Sidebar.css
+++ b/src/containers/sidebar/Sidebar.css
@@ -109,6 +109,8 @@
 
 .Sidebar.checkout .sidebar-checkout .choices .choice .left {
   float: left;
+  padding-right: 0;
+  width: 75%;
 }
 
 .Sidebar.checkout .sidebar-checkout .choices .choice .right {
@@ -139,13 +141,5 @@
     max-width: inherit;
     width: 100%;
     position: relative;
-  }
-}
-
-@media (max-width: 1450px) {
-  .Sidebar.checkout .sidebar-checkout .choices .choice .right {
-    display: block;
-    float: left;
-    width: 100%;
   }
 }
